# CyanVNE

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
Audio/: CMakeLists.txt
Audio/AudioManager/: AudioManager.cpp  AudioManager.h
Audio/Events/: AudioEvents.h
Audio/IAudioEngine/: IAudioEngine.h
Audio/SoloudAudioEngine/: SoloudAudioEngine.cpp  SoloudAudioEngine.h
Core/: CMakeLists.txt
Core/CoreException/: CoreException.h
Core/Logger/: Logger.cpp  Logger.h
Core/MemoryStreamImpl/: MemoryStreamImpl.cpp  MemoryStreamImpl.h
Core/PathToStream/: PathToStream.h
Core/Serialization/: Serialization.h
Core/SpscQueue/: SpscQueue.h
Core/Stream/: Stream.cpp  Stream.h
Core/TSVector/: TSVector.h
Core/ViewID/: ViewID.h
CyanVNE/: CMakeLists.txt  CyanVNE.cpp  CyanVNE.h
CyanVNE/Application/: Application.h
CyanVNE/ToolApplication/: ToolApplication.h
Parser/: CMakeLists.txt
Parser/AppSettings/: AppSettings.cpp  AppSettings.h
Parser/AppSettings/AppSettingsParsers/: AppSettingsParsers.cpp  AppSettingsParsers.h
Parser/CommandParser/: CommandParser.cpp  CommandParser.h
Parser/CommandsParser/: CommandsParser.cpp  CommandsParser.h
Parser/DataStructures/: GameData.h
Parser/Ecs/: ComponentEmplacer.h  ComponentParsers.cpp  ComponentParsers.h
Parser/Framework/: Framework.cpp  Framework.h
Parser/GameDataParsers/: GameDataParsers.cpp  GameDataParsers.h
Parser/ParserException/: ParserException.h
Parser/ParserFactories/: ParserFactories.h
Parser/ParserUtil/: ParserUtil.cpp  ParserUtil.h
Parser/ParserYamlInterface/: ParserYamlInterface.h
Parser/ThemeConfig/: ThemeConfig.cpp  ThemeConfig.h
Parser/ThemeConfig/ThemeConfigParser/: ThemeConfigParser.cpp  ThemeConfigParser.h
Parser/ThemeConfigParser/: ThemeConfigParser.cpp  ThemeConfigParser.h
Platform/: CMakeLists.txt
Platform/Algorithm/Binarization/: Binarization.cpp  Binarization.h
Platform/Algorithm/ContourTracing/: ContourTracing.cpp  ContourTracing.h
Platform/Algorithm/Polypartition/: Polypartition.cpp  Polypartition.h
Platform/Algorithm/Simplification/: Simplification.cpp  Simplification.h
Platform/BasicRender/: BasicRender.cpp  BasicRender.h
Platform/ErrorEvent/: ErrorEvent.cpp  ErrorEvent.h
Platform/EventBus/: EventBus.cpp  EventBus.h
Platform/FontManager/: FontManager.cpp  FontManager.h
Platform/GraphicsContext/: GraphicsContext.cpp  GraphicsContext.h
Platform/GuiContext/: GuiContext.cpp  GuiContext.h
Platform/GuiContext/Detail/: README.md  fs_ocornut_imgui.bin.h  imgui_impl_bgfx.cpp  imgui_impl_bgfx.h  vs_ocornut_imgui.bin.h
Platform/Monitor/: Monitor.cpp  Monitor.h
Platform/PlatformException/: PlatformException.h
Platform/Thread/: UnifiedConcurrencyManager.h
Platform/UniversalPathToStream/: UniversalPathToStream.h
Platform/WMContext/: WMContext.h
Platform/WindowContext/: WindowContext.cpp  WindowContext.h
Resource/: CMakeLists.txt
Resources/: CMakeLists.txt
Resources/Adapters/: SdlIoStreamAdapter.cpp  SdlIoStreamAdapter.h
Resources/CachingResourcesManager/: CachingResourcesManager.cpp  CachingResourcesManager.h
Resources/ICacheResourcesManager/: ICacheResourcesManager.h
Resources/ICachedResource/: ICachedResource.h
Resources/ResourceTypes/: ResourceType.cpp  ResourceTypes.h
Resources/ResourcesDefination/: ResourcesDefination.h
Resources/ResourcesException/: ResourcesException.h
Resources/ResourcesManager/: ResourcesManager.cpp  ResourcesManager.h
Resources/ResourcesPacker/: ResourcesPacker.cpp  ResourcesPacker.h
Resources/StreamUniversalImpl/: StreamUniversalImpl.cpp  StreamUniversalImpl.h
Resources/ThemeMinimumRequire/: ThemeMinimumRequire.h
Resources/ThemePackCreator/: ThemePackCreator.h
Resources/ThemeResourcesManager/: ThemeResourcesManager.cpp  ThemeResourcesManager.h
Resources/ThemeResourcesPacker/: ThemeResourcesPacker.cpp  ThemeResourcesPacker.h
Resources/UnifiedCacheManager/: UnifiedCacheManager.cpp  UnifiedCacheManager.h
Resources/UniversalPathToStream/: UniversalPathToStream.h
Runtime/: CMakeLists.txt
Runtime/BasicRender/: BasicRender.cpp  BasicRender.h
Runtime/Buffer/: Buffer.cpp
Runtime/Commands/: Commands.h
Runtime/Components/: Components.cpp  Components.h
Runtime/EcsGameState/: EcsGameState.cpp  EcsGameState.h
Runtime/EventCore/: EventCore.h
Runtime/Events/: AudioEvents.h  Events.h
Runtime/GameStateManager/: GameStateManager.cpp  GameStateManager.h
Runtime/GuiContext/: GuiContext.cpp  GuiContext.h
Runtime/GuiDebugState/: GuiDebugState.h
Runtime/GuiSystem/: GuiSystem.cpp  GuiSystem.h
Runtime/ICommand/: ICommand.h
Runtime/IGameState/: IGameState.cpp  IGameState.h
Runtime/IGuiWindow/: IGuiWindow.h
Runtime/Renderer/MeshBatchRenderer/: MeshBatchRenderer.cpp  MeshBatchRenderer.h
Runtime/RuntimeException/: RuntimeException.h
Runtime/RuntimeUtils/: RuntimeUtils.cpp  RuntimeUtils.h
Runtime/Scene/: Scene.cpp  Scene.h
Runtime/Systems/: Systems.cpp  Systems.h
Runtime/WMContext/: WMContext.h
Runtime/WindowContext/: WindowContext.cpp  WindowContext.h
Shaders/: CMakeLists.txt
Shaders/original_sprite/: fs_sprite.glsl  fs_sprite.sc  varying.def.glsl  vs_sprite.glsl
